--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deployjs-angular-build",
+  "name": "@deployjs/angular-build",
   "version": "0.0.1",
   "description": "Build Angular projects ready for deployment",
   "main": "index.js",
@@ -13,6 +13,10 @@
     "ember-cli-deploy-plugin": "^0.2.1",
     "glob": "^7.1.1",
     "rsvp": "^3.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/deployjs/deployjs-angular-build.git"
   },
   "author": "",
   "license": "MIT"
